build_log.txt
[0;36m==> [1;36mNotice:[m Build may be slow as Theos isn’t using all available CPU cores on this computer. Consider upgrading GNU Make: https://theos.dev/docs/parallel-building
[1;31m> [1;3;39mMaking all for tweak vcamoverlay…[m
[0;31m==> [1;39mPreprocessing Tweak.xm…[m
[0;32m==> [1;39mCompiling Tweak.xm (arm64)…[m
[1mTweak.xm:151:20: [0m[0;1;31merror: [0m[1mpassing address of non-local object to __autoreleasing parameter for write-back[0m
             swRef:&_audioSwitch];
[0;1;32m                   ^~~~~~~~~~~~~
[0m[1mTweak.xm:157:20: [0m[0;1;31merror: [0m[1mpassing address of non-local object to __autoreleasing parameter for write-back[0m
             swRef:&_shortcutSwitch];
[0;1;32m                   ^~~~~~~~~~~~~~~~
[0m2 errors generated.
make[3]: *** [/Users/runner/work/vcam-overlay/vcam-overlay/.theos/obj/arm64/Tweak.xm.06d8e571.o] Error 1
rm /Users/runner/work/vcam-overlay/vcam-overlay/.theos/obj/arm64/Tweak.xm.mm
make[2]: *** [/Users/runner/work/vcam-overlay/vcam-overlay/.theos/obj/arm64/vcamoverlay.dylib] Error 2
make[1]: *** [internal-library-all_] Error 2
make: *** [vcamoverlay.all.tweak.variables] Error 2
